# codex-relay

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.setup.ts  项目提示词.txt
.codex/: config.toml
.trellis/: .template-hashes.json  config.yaml  workflow.md
docs/: architecture.md  config-transaction.md  security-notes.md  verification-report.md
fixtures/: auth-api-key.json  auth-invalid.json  config-empty.toml  config-invalid.toml  config-multiple-providers.toml  config-single-provider.toml  config-with-comments.toml  config-with-unknown-fields.toml  providers-empty.json  providers-invalid.json  providers-multiple.json
scripts/: prepare-dev-data.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: custom-installer.nsi
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: backup_commands.rs  mod.rs  provider_commands.rs  self_check_commands.rs  settings_commands.rs
src-tauri/src/infrastructure/: atomic_file.rs  file_fingerprint.rs  mod.rs  path_service.rs  safe_log.rs
src-tauri/src/models/: backup.rs  health.rs  mod.rs  provider.rs  settings.rs  transaction.rs
src-tauri/src/services/: auth_service.rs  autostart_service.rs  backup_service.rs  config_service.rs  file_watch_service.rs  mod.rs  provider_secret_service.rs  provider_service.rs  self_check_service.rs  settings_service.rs  transaction_service.rs
src-tauri/tests/: path_safety.rs  provider_workflow.rs
(+179 files in other folders)
